# rabbitmq_workshop

./: .gitignore  docker-compose.yml  presentation.md  readme.md
js/: ack_sample.js  default_example.js  default_sample.js  direct_exchange.js  direct_sample.js  exchange_example.js  fanout_example.js  fanout_sample.js  hash_example.js  headers_example.js  headers_sample.js  package-lock.json  package.json  prefetch_example.js  rpc_example.js  topic_sample.js  workers_example.js  workers_sample.js
py/: ack_example.py  default_sample.py  direct_example.py  exchange_sample.py  fanout_example.py  hash_sample.py  headers_sample.py  prefect_example.py  pyproject.toml  rpc_example.py  topic_example.py  workers_example.py
