[tool.poetry]
name = "rabbitmq_samples"
version = "0.1.0"
description = ""
authors = ["Cristian Prieto <me@cprieto.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.7.1"
rich = "^9.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
